tdf#121498: also process --help/--version before VCL init on Win

Otherwise they would be passed to the other running instance, and
processed there, without outputting the data to the callng console

Change-Id: I5cd9d11b567dfed06e19e9a2c4c29bc82868c064